tests/pass/run/ownership_trivial_value_no_move/main.kira
function add(a: Int, b: Int) -> Int {
    return a + b
}

@Main
function main() {
    let x = 1
    let y = add(x, x)
    print(y)
    return
}
